--- a/server/package.json
+++ b/server/package.json
@@ -6,5 +6,12 @@
     "helmet": "^4.4.1",
     "mongoose": "^5.12.0",
     "morgan": "^1.10.0"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
