✅API / Table / Logic

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-CORS_ORIGIN= 
-DATABASE_URL=
+CORS_ORIGINS=http://localhost:3000
+DATABASE_URL="mongodb+srv://jiahui816:liou970921@cluster0.mf7kq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 PORT=3003
